# chatbot_cnnt

./: README.md  agents.yaml  crew.py  main.py  pyproject.toml  requirements.txt  tasks.yaml
db/: chroma.sqlite3
src/chatbot_cnnt/: crew.py  main.py  test.py
src/chatbot_cnnt/config/: agents.yaml  tasks.yaml
